--- a/src/components/views/HomePage/homeStyle.scss
+++ b/src/components/views/HomePage/homeStyle.scss
@@ -61,3 +61,16 @@
 .threeHero {
   width: 100%;
 }
+
+.image-container {
+  position: relative;
+  display: inline-block;
+  left: 23%;
+}
+
+.image-container img {
+  display: block;
+  width: 40rem;
+  height: auto;
+  transition: transform 0.3s ease-out;
+}
