PR-[FV-7]-update

--- a/src/components/layout/Header/style.scss
+++ b/src/components/layout/Header/style.scss
@@ -5,6 +5,7 @@
   position: fixed;
   width: 100%;
   z-index: 9999;
+  border-bottom: 0.1rem solid #bc191a;
   @media (max-width: 960px) {
     justify-content: center;
   }
