--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 10px;
+}
+
+/* Customize the scrollbar track */
+::-webkit-scrollbar-track {
+  background-color: rgb(25, 25, 25);
+}
+
+/* Customize the scrollbar thumb */
+::-webkit-scrollbar-thumb {
+  background-color: red;
+  border-radius: 5px;
+}
