PR-[FV-8]-logo_siginPage

--- a/src/components/layout/Header/style.scss
+++ b/src/components/layout/Header/style.scss
@@ -40,7 +40,7 @@
 }
 
 .logo {
-  width: 150px;
+  // width: 150px;
   padding: 20px 40px;
   @media (max-width: 768px) {
     /* Styles for screens larger than or equal to 768px */
