PR-[FV-8]-react_three_fiber

--- a/src/components/views/HomePage/homeStyle.scss
+++ b/src/components/views/HomePage/homeStyle.scss
@@ -154,7 +154,7 @@
 .image-container {
   position: relative;
   display: inline-block;
-  left: 23%;
+  // left: 23%;
   @media (max-width: 1400px) {
     left: 0%;
   }
