--- a/src/components/views/Dashboard/style.scss
+++ b/src/components/views/Dashboard/style.scss
@@ -58,7 +58,7 @@
 .sidebarcontrol {
   position: absolute;
   right: -28px;
-  background: black;
+  background: #5b6c80;
   margin-top: -20px;
   border-radius: 7px;
   padding: 4px;
@@ -70,4 +70,8 @@
 
 .css-vubbuv {
   color: white!important;
+}
+
+#leftSideBG {
+  background-color: #252c34;
 }
