--- a/src/components/views/Dashboard/style.scss
+++ b/src/components/views/Dashboard/style.scss
@@ -32,6 +32,7 @@
 .right-sidebar {
   background-color: #fff;
   padding: 20px;
+  z-index: 2;
 }
 
 .right-sidebar h1 {
@@ -51,10 +52,6 @@
   }
 }
 
-.css-i4bv87-MuiSvgIcon-root {
-  color: white!important;
-}
-
 .sidebarcontrol {
   position: absolute;
   right: -28px;
@@ -62,6 +59,7 @@
   margin-top: -20px;
   border-radius: 7px;
   padding: 4px;
+  z-index: 3;
 }
 
 .MuiListItemIcon-root{
